# llsimd

./: .gitignore  CMakeLists.txt  README.md  llsimd.cpp  llsimd.h  llsimd.sh  plugin.cpp  psimd.cpp  psimd.h
examples/: mmx.c
examples/mmx/: _mm_add_pi16.c  _mm_add_pi32.c  _mm_add_pi8.c  _mm_empty.c  _mm_madd_pi16.c  _mm_mulhi_pi16.c  _mm_packs_pi16.c  _mm_packs_pi32.c  _mm_packs_pu16.c  _mm_sll_pi16.c  _mm_sll_pi32.c  _mm_sll_si64.c  _mm_slli_pi16.c  _mm_slli_pi32.c  _mm_slli_si64.c  _mm_sra_pi16.c  _mm_sra_pi32.c  _mm_srai_pi16.c  _mm_srai_pi32.c  _mm_srl_pi16.c  _mm_srl_pi32.c  _mm_srl_si64.c  _mm_srli_pi16.c  _mm_srli_pi32.c  _mm_srli_si64.c
tests/: lit.cfg  lit.cfg.py
tests/mmx/: _mm_add_pi16.c  _mm_add_pi32.c  _mm_add_pi8.c  _mm_empty.c  _mm_madd_pi16.c  _mm_mulhi_pi16.c  _mm_packs_pi16.c  _mm_packs_pi32.c  _mm_packs_pu16.c  _mm_sll_pi16.c  _mm_sll_pi32.c  _mm_sll_si64.c  _mm_slli_pi16.c  _mm_slli_pi32.c  _mm_slli_si64.c  _mm_sra_pi16.c  _mm_sra_pi32.c  _mm_srai_pi16.c  _mm_srai_pi32.c  _mm_srl_pi16.c  _mm_srl_pi32.c  _mm_srl_si64.c  _mm_srli_pi16.c  _mm_srli_pi32.c  _mm_srli_si64.c
